<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".MainActivity">


    <!-- Back Button -->
    <ImageView
        android:id="@+id/back_button"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_back_arrow"
        android:contentDescription="@string/back"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#000000"
        android:text="@string/title_text" />

    <ImageView
        android:id="@+id/status_pending"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/pending_icon"
        android:src="@drawable/ic_pending"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageView
        android:id="@+id/status_in_progress"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/in_progress_icon"
        android:src="@drawable/ic_in_progress"
        app:layout_constraintStart_toEndOf="@id/status_pending"
        android:layout_marginStart="105dp"
        app:layout_constraintTop_toTopOf="@id/status_pending" />

    <ImageView
        android:id="@+id/status_done"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/done_icon"
        android:src="@drawable/ic_done"
        app:layout_constraintStart_toEndOf="@id/status_in_progress"
        android:layout_marginStart="115dp"
        app:layout_constraintTop_toTopOf="@id/status_pending" />



    <View
        android:id="@+id/progress_line"
        android:layout_width="300dp"
        android:layout_height="4dp"
        android:layout_marginTop="44dp"
        android:background="#FFE088"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />


    <View
        android:id="@+id/step_one"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="-10dp"
        android:background="@drawable/circle_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_line" />

    <View
        android:id="@+id/step_two"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/circle_empty"
        app:layout_constraintEnd_toStartOf="@id/step_three"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@id/step_one"
        app:layout_constraintTop_toBottomOf="@id/progress_line" />

    <View
        android:id="@+id/step_three"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/circle_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_pengadu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stroke"
            android:orientation="horizontal"
            android:padding="16dp">


            <ImageView
                android:id="@+id/foto_pengadu"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="Foto Pengadu"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_1" />

            <!-- Gambar kedua di bawahnya -->

            <ImageView
                android:id="@+id/foto_pengadu_bawah"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="-20dp"
                android:layout_marginTop="25dp"
                android:contentDescription="Foto Pengadu Bawah"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_2" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nama_pengadu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Jekson Karmela"
                    android:textColor="#FFEDB9"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nomor_pengadu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="09031282227134"
                    android:textColor="#FFEDB9"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Detail Pengaduan -->

    <!-- CardView untuk setiap detail pengaduan -->

    <TextView
        android:id="@+id/detail_pengaduan_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Detail Pengaduan"
        android:textColor="#3470A2"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_pengadu" />

    <androidx.cardview.widget.CardView
        android:id="@+id/detail_pengaduan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/detail_pengaduan_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stroke2"
            android:orientation="vertical"
            android:padding="16dp">


            <!-- Solusi Yang Diharapkan -->
            <TextView
                android:layout_width="315dp"
                android:layout_height="60dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/stroke"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:text="Judul Pengaduan: \nada yang mengikuti saya terus menerus"
                android:textColor="#FFEDB9"
                android:textSize="14sp" />

            <TextView
                android:layout_width="315dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/stroke"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:text="Solusi Yang Diharapkan: \nSegera ditindak"
                android:textColor="#FFEDB9"
                android:textSize="14sp" />

            <!-- Jenis Pengaduan -->
            <TextView
                android:layout_width="314dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/stroke"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:text="Jenis Pengaduan: \nKeamanan"
                android:textColor="#FFEDB9"
                android:textSize="14sp" />

            <!-- Deskripsi Pengaduan -->
            <TextView
                android:layout_width="314dp"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/stroke"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:text="Deskripsi Pengaduan: \nDi bawah perpus saya merasa ada yang mengikuti saya."
                android:textColor="#FFEDB9"
                android:textSize="14sp" />

            <!-- Bukti Pendukung -->
            <LinearLayout
                android:layout_width="314dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/stroke"
                android:orientation="vertical"
                android:padding="10dp">

                <!-- TextView untuk Bukti Pendukung -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:text="Bukti Pendukung:"
                    android:textColor="#FFEDB9"
                    android:textSize="14sp" />

                <!-- LinearLayout horizontal untuk gambar dan nama file -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Gambar di sebelah kiri -->

                    <!-- TextView untuk nama file di sebelah gambar, center vertical -->
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="Bukti Pendukung"
                        android:src="@drawable/ss" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:text="Screenshot220923.jpg"
                        android:textColor="#FFEDB9"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Button "Menunggu Konfirmasi" -->


    <Button
        android:id="@+id/button_konfirmasi"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/stroke4"
        android:text="Menunggu Konfirmasi"
        android:textColor="#3470A2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_pengaduan" />

    <TextView
        android:id="@+id/status_belum_dikonfirmasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="Belum Dikonfirmasi"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status_pending" />

    <TextView
        android:id="@+id/status_sedang_diproses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sedang Diproses"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/status_belum_dikonfirmasi"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@id/status_belum_dikonfirmasi" />

    <TextView
        android:id="@+id/status_selesai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selesai"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/status_sedang_diproses"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toTopOf="@id/status_belum_dikonfirmasi" />


</androidx.constraintlayout.widget.ConstraintLayout>
